--- a/elasticsearch/ingest.yml
+++ b/elasticsearch/ingest.yml
@@ -25,11 +25,6 @@ esConfig:
           cluster.name: "docker-cluster"
           network.host: 0.0.0.0
           logger.org.elasticsearch.index.reindex: error
-          reindex.remote.whitelist: "dev.giggso.com:9200"
-          #reindex.remote.whitelist: "uat.giggso.com:9200"
-          
-          #xpack.security.enabled: true
-          #xpack.security.transport.ssl.enabled: true
           #  elasticsearch.yml: |
 #    key:
 #      nestedkey: value
@@ -61,7 +56,7 @@ secretMounts: []
 
 #image: docker.elastic.co/elasticsearch/elasticsearch
 #image: giggsodocker/giggso-elastic-bitnami
-image: giggsodocker/giggso-elastic-uat-azure
+image: giggsodocker/giggso-elastic-uat
 imageTag: latest
 #giggsodocker/giggso-elastic-prod
 #giggsodocker/elasticsearch
@@ -283,9 +278,9 @@ lifecycle: {}
 sysctlInitContainer:
   enabled: true
 
-#keystore: []
-keystore:
-   - secretName: azure-backup
+keystore: []
+#keystore:
+#   - secretName: azure-backup
 
 
 # Deprecated
