--- a/elasticsearch/master.yml
+++ b/elasticsearch/master.yml
@@ -25,10 +25,6 @@ esConfig:
      cluster.name: "docker-cluster"
      network.host: 0.0.0.0
      logger.org.elasticsearch.index.reindex: error
-     reindex.remote.whitelist: "dev.giggso.com:9200"
-     #reindex.remote.whitelist: "uat.giggso.com:9200"
-     #xpack.security.enabled: true
-     #xpack.security.transport.ssl.enabled: true
      #    key:
 #      nestedkey: value
 #  log4j2.properties: |
@@ -59,7 +55,7 @@ secretMounts: []
 #    path: /usr/share/elasticsearch/config/certs
 #    defaultMode: 0755
 
-image: giggsodocker/giggso-elastic-uat-azure
+image: giggsodocker/giggso-elastic-uat
 #giggsodocker/giggso-elastic-prod
 #giggsodocker/elasticsearch
 imageTag: latest
@@ -130,6 +126,8 @@ podSecurityPolicy:
 
 persistence:
   enabled: true
+  labels:
+    enabled: false
   annotations: {}
 
 extraVolumes: []
@@ -281,9 +279,9 @@ lifecycle: {}
 sysctlInitContainer:
   enabled: true
 
-#keystore: []
-keystore:
-   - secretName: azure-backup
+keystore: []
+#keystore:
+#   - secretName: azure-backup
 
 
 # Deprecated
