--- a/mariadb-cluster/templates/master-statefulset.yaml
+++ b/mariadb-cluster/templates/master-statefulset.yaml
@@ -223,8 +223,8 @@ spec:
             {{- end }}
             {{- if .Values.master.config }}
             - name: config
-              mountPath: /opt/bitnami/mariadb/conf/my.cnf
-              subPath: my.cnf
+              mountPath: /opt/bitnami/mariadb/conf
+              #subPath: my.cnf
             {{- end }}
             {{- if or .Values.rootUser.injectSecretsAsVolume .Values.db.injectSecretsAsVolume .Values.replication.injectSecretsAsVolume }}
             - name: mariadb-credentials
