--- a/angular/env-configmap.yaml
+++ b/angular/env-configmap.yaml
@@ -22,7 +22,7 @@ data:
         window.__env.CLIENT_NAME = '';
         window.__env.DIALOGFLOW_TOKEN = 'abd5f6a0dc614b018302d7587f4e3dc3';
         window.__env.TERMINAL_SOCKET_URL = 'https://' + window['__env'].HOST_PROD + '/terminal';
-        window.__env.REGISTRATIONREQUIRED = false;
+        window.__env.REGISTRATIONREQUIRED = true;
     }(this));
 kind: ConfigMap
 metadata:
