--- a/elasticsearch/giggsodata.yml
+++ b/elasticsearch/giggsodata.yml
@@ -10,7 +10,7 @@ masterService: "elasticsearch"
 # These will be set as environment variables. E.g. node.master=true
 roles:
   master: "false"
-  ingest: "false"
+  ingest: "true"
   data: "true"
 
 replicas: 2
