mariadb moved to coordinator node

--- a/mariadb-cluster/values-production.yaml
+++ b/mariadb-cluster/values-production.yaml
@@ -224,12 +224,20 @@ master:
   ## Node labels for pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  nodeSelector: {}
+  #nodeSelector: {}
+  nodeSelector:
+    dedicated_label: coordinator
+  #tolerations: []
+  tolerations:
+    - key: "dedicated_label"
+      operator: "Equal"
+      value: "coordinator"
+      effect: "NoSchedule"
 
   ## Tolerations for pod assignment
   ## Ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
   ##
-  tolerations: []
+  #tolerations: []
 
   ## updateStrategy for MariaDB Master StatefulSet
   ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
