--- a/elasticdump_script/dump/analyzer/hostmap_mapping.json
+++ b/elasticdump_script/dump/analyzer/hostmap_mapping.json
@@ -1,1 +1,1 @@
-{"hostmap":{"mappings":{}}}
+{"hostmap":{"mappings":{"properties":{"group_id":{"type":"long"},"host_name":{"type":"text","fields":{"keyword":{"type":"keyword","ignore_above":256}}}}}}}
