--- a/angular/env-configmap.yaml
+++ b/angular/env-configmap.yaml
@@ -3,14 +3,14 @@ data:
   env.js: |
     (function (window) {
         window.__env = window.__env || {};
-        window.__env.HOST_PROD = 'ggdev.giggso.com';
+        window.__env.HOST_PROD = 'appdomain';
         window.__env.BASE_URL_PROD = 'https://' + window['__env'].HOST_PROD + '/';
         window.__env.SOCKETIO_PROD = 'https://' + window['__env'].HOST_PROD + '/realtime';
         window.__env.SITEURL_PROD = 'https://' + window['__env'].HOST_PROD + '/';
         window.__env.SITESUBURL_PROD = 'https://' + window['__env'].HOST_PROD + '/';
         window.__env.APPSPHPURL_PROD = 'https://' + window['__env'].HOST_PROD + '/app/';
         window.__env.API_BASE_URL_PROD = 'https://' + window['__env'].HOST_PROD+ '/giggso_kc/rest/';
-        window.__env.KEYCLOAKURL_PROD = 'https://ggdevkc.giggso.com/auth';
+        window.__env.KEYCLOAKURL_PROD = 'https://kcdomain/auth';
         window.__env.KEYCLOAKREALM_PROD = 'giggso';
         window.__env.KEYCLOAKCLIENTID_PROD = 'angular-cors';
 
