--- a/web/jboss_external_config_configmap.yaml
+++ b/web/jboss_external_config_configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   external_config.properties: |
 
-    applicationDownloadPath = https://ggdev.giggso.com/staticFiles/
+    applicationDownloadPath = https://appdomain/staticFiles/
 
     applicationUploadPath = /opt/jboss/wildfly/standalone/giggso_attachments/
 
@@ -48,9 +48,9 @@ data:
 
     servicenow.post.url =  http://php:80/servicenow/index.php?task=create&table=incident&instance=
 
-    socketio.url = https://ggdev.giggso.com/realtime
+    socketio.url = https://appdomain/realtime
 
-    route.base.url = https://ggdev.giggso.com/router?pageTo=
+    route.base.url = https://appdomain/router?pageTo=
 
     beats.url =  http://giggso-logingestion:5000/FetchConfiguration
 
@@ -75,19 +75,19 @@ data:
     askgiggso.correlated.event = http://correlated-events:8203/rca/correlatedEvents
 
     askgiggso.timeline.analysis = http://giggso-aiml-rca:8202/rca/getTimelineDetails
-    
-    BOOTSTRAP-SERVER = kafka-cluster:9092 
+
+    BOOTSTRAP-SERVER = kafka-cluster:9092
 
     TRINO_JDBC_DRIVER=io.trino.jdbc.TrinoDriver
-        
+
     TRINO_JDBC_BASE_URL=jdbc:trino://trino:8080/kafka/default
 
     TRINO_KAFKA_USER=test
-    
+
     credentialmgmt.vault.token =
-    
+
     credentialmgmt.kv.post =
-    
+
     credentialmgmt.kv.delete =
 
 kind: ConfigMap
