--- a/mariadb-cluster/values-production.yaml
+++ b/mariadb-cluster/values-production.yaml
@@ -224,15 +224,15 @@ master:
   ## Node labels for pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  #nodeSelector: {}
-  nodeSelector:
-    dedicated_label: coordinator
-  #tolerations: []
-  tolerations:
-    - key: "dedicated_label"
-      operator: "Equal"
-      value: "coordinator"
-      effect: "NoSchedule"
+  nodeSelector: {}
+  #nodeSelector:
+  #  dedicated_label: coordinator
+  tolerations: []
+  #tolerations:
+  #  - key: "dedicated_label"
+  #    operator: "Equal"
+  #    value: "coordinator"
+  #    effect: "NoSchedule"
 
   ## Tolerations for pod assignment
   ## Ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
