--- a/elasticdump_script/.env
+++ b/elasticdump_script/.env
@@ -11,7 +11,6 @@ gggroupapps
 ggusers
 ggtrackings
 ruleexecutor
-gglogs
 ggreminders
 ggemails
 ggrules
@@ -25,3 +24,9 @@ gglists
 ggsearch
 hoststatistics
 gghashtags
+ggjobsanomaly
+ggcapacity
+ggjobs
+taggedgrouptimer
+gggrouphosts
+ggprocessess
