--- a/elasticdump_script/export/dump/analyzer/hostalertmap_mapping.json
+++ b/elasticdump_script/export/dump/analyzer/hostalertmap_mapping.json
@@ -1,1 +1,1 @@
-{"hostalertmap":{"mappings":{}}}
+{"hostalertmap":{"mappings":{"properties":{"hostname":{"type":"text","fields":{"keyword":{"type":"keyword","ignore_above":256}}},"name":{"type":"text","fields":{"keyword":{"type":"keyword","ignore_above":256}}}}}}}
