--- a/ruleengine/ruleengine-config.yaml
+++ b/ruleengine/ruleengine-config.yaml
@@ -50,7 +50,11 @@ data:
     #topic to produce unmatched rules
     KAFKA_TOPIC_UNMATCHED_RULES=ggruleprocessed
     #######################################
-  
+
+    KSQLDB_SERVER_HOST=gg-ksqldb
+    KSQLDB_SERVER_HOST_PORT=8088
+    KSQLDB_POLL_DURATION=20
+
 kind: ConfigMap
 metadata:
   name: ruleengine-config
