--- a/zookeeper/values.yaml
+++ b/zookeeper/values.yaml
@@ -102,7 +102,8 @@ volumePermissions:
 ##
 updateStrategy: RollingUpdate
 
-## Limits the number of pods of the replicated application that are down simultaneously from voluntary disruptions
+## Limits the number of pods of the 
+ted application that are down simultaneously from voluntary disruptions
 ## The PDB will only be created if replicaCount is greater than 1
 ## ref: https://kubernetes.io/docs/concepts/workloads/pods/disruptions
 ##
@@ -121,7 +122,7 @@ podManagementPolicy: Parallel
 
 ## Number of ZooKeeper nodes
 ##
-replicaCount: 2
+replicaCount: 1
 
 ## Minimal server ID (ZooKeeper myid) value
 ## servers increment their ID starting at this minimal value.
