--- a/kafka/values.yaml
+++ b/kafka/values.yaml
@@ -500,14 +500,14 @@ affinity: {}
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
-nodeSelector:
-  dedicated_label: kafka
+#nodeSelector:
+#  dedicated_label: kafka
   #tolerations: []
-tolerations:
-  - key: "dedicated_label"
-    operator: "Equal"
-    value: "kafka"
-    effect: "NoSchedule"
+#tolerations:
+ # - key: "dedicated_label"
+  #  operator: "Equal"
+   # value: "kafka"
+    #effect: "NoSchedule"
 
 #nodeSelector: {}
 
