--- a/AzUpload/azupload-service.yaml
+++ b/AzUpload/azupload-service.yaml
@@ -5,7 +5,7 @@ metadata:
     service: giggso-azupload
   name: giggso-azupload
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: "8080"
     port: 8080
