--- a/EnrichData/enrichdata-config.yaml
+++ b/EnrichData/enrichdata-config.yaml
@@ -1,18 +1,42 @@
 apiVersion: v1
 data:
-  giggsoaccess.properties: |
+  rulemicroservice.properties: |
     ##########################################################################################################
     ###### Elastic Search Source Configuration ###############################################################
-
     SOURCE_SCHEMA=http
-    SOURCE_HOST=elasticsearch
-    SOURCE_PORT=9300
+    SOURCE_HOST=dev.giggso.com
+    SOURCE_PORT=7300
+    SOURCE_REST_PORT=7201
     SOURCE_HOST_USERNAME=elastic
     SOURCE_HOST_PASSWORD=changeme
     SOURCE_HOST_CONNECTION_TIMEOUT=100
     CLUSTER_NAME=docker-cluster
-    KAFKA_BOOTSTRAP_SERVER=kafka-cluster:9092
-    OPEN_GROUP_ID=2
+
+    ##########################################################################################################
+    ###### Rest Template Configuration #######################################################################
+
+    GIGGSO_BASE_URL=http://127.0.0.1:8080/giggzo-0.0.1-SNAPSHOT/rest/
+    RULE_URL=rules/v2/processRule
+    ERROR_ACTION_RULE_ID=5134
+
+    ##########################################################################################################
+    ###### Pulsar Configuration ##############################################################################
+
+    PULSAR_SERVICE_URL=pulsar://pulsar:6650
+    #PULSAR_SERVICE_URL=pulsar://127.0.0.1:6650
+    PULSAR_GGLOGS_RULE_TOPIC=process_gglogs_rule_topic
+
+    ##########################################################################################################
+    ###### Spring Boot Configuration ##############################################################################
+
+    SERVER_PORT=8123
+
+    ########################################################################################################
+    #######################################
+    ########## Trino Config ###############
+    TRINO_JDBC_DRIVER=io.trino.jdbc.TrinoDriver
+      #jdbc:trino://example.net:8080/topic/schema?user=test&password=****&SSL=true
+    TRINO_JDBC_BASE_URL=jdbc:trino://trino:8080/kafka/default?user=test
 
 kind: ConfigMap
 metadata:
