--- a/EnrichData/enrichdata-service.yaml
+++ b/EnrichData/enrichdata-service.yaml
@@ -5,7 +5,7 @@ metadata:
     service: giggso-enrichdata
   name: giggso-enrichdata
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: "8080"
     port: 8080
