--- a/NoncoreLogAggregator/nclogaggregator-service.yaml
+++ b/NoncoreLogAggregator/nclogaggregator-service.yaml
@@ -5,7 +5,7 @@ metadata:
     service: giggso-nclogaggregator
   name: giggso-nclogaggregator
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: "8080"
     port: 8080
