--- a/kafka/values.yaml
+++ b/kafka/values.yaml
@@ -502,12 +502,12 @@ affinity: {}
 ##
 #nodeSelector:
 #  dedicated_label: kafka
-  #tolerations: []
+#  #tolerations: []
 #tolerations:
- # - key: "dedicated_label"
-  #  operator: "Equal"
-   # value: "kafka"
-    #effect: "NoSchedule"
+#  - key: "dedicated_label"
+#    operator: "Equal"
+#    value: "kafka"
+#    effect: "NoSchedule"
 
 #nodeSelector: {}
 
@@ -548,8 +548,8 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits: 
-     cpu: 1250m
-     memory: 24Gi
+     cpu: 500m
+     memory: 2Gi
   requests: 
      cpu: 250m
      memory: 2Gi
@@ -758,7 +758,7 @@ persistence:
     - ReadWriteOnce
   ## PVC size
   ##
-  size: 80Gi
+  size: 1Gi
   ## PVC annotations
   ##
   annotations: {}
@@ -790,7 +790,7 @@ logPersistence:
     - ReadWriteOnce
   ## PVC size
   ##
-  size: 8Gi
+  size: 1Gi
   ## PVC annotations
   ##
   annotations: {}
