--- a/ksqldb/values.yaml
+++ b/ksqldb/values.yaml
@@ -32,7 +32,7 @@ kafka:
   ## If true, kafka was instaled under the same umbrella
   enabled: false
   ## If outside or custom kafka a bootstrap server is required
-  bootstrapServers: PLAINTEXT://kafka-cluster:9092
+  bootstrapServers:  PLAINTEXT://10.106.115.125:9092
 
 ## Schema Registry Configuration
 schema-registry:
@@ -44,7 +44,7 @@ schema-registry:
 ## Kafka Connect Configuration
 kafka-connect:
   ## If true, schema-registry was instaled under the same umbrella
-  enabled: false
+  enabled: false 
   ## If outside or custom a URL and port are required to connect
   url:
 
