--- a/storage_class/ssd_storage_class.yml
+++ b/storage_class/ssd_storage_class.yml
@@ -8,7 +8,7 @@ parameters:
   cachingmode: ReadOnly
   kind: Managed
   storageaccounttype: StandardSSD_LRS
-provisioner: kubernetes.io/azure-disk
+provisioner: k8s.io/minikube-hostpath
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
