--- a/storage_class/storage_class.yml
+++ b/storage_class/storage_class.yml
@@ -8,7 +8,7 @@ parameters:
   cachingmode: ReadOnly
   kind: Managed
   storageaccounttype: Standard_LRS
-provisioner: kubernetes.io/azure-disk
+provisioner: k8s.io/minikube-hostpath
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
