--- a/webpush/webpush-service.yaml
+++ b/webpush/webpush-service.yaml
@@ -5,7 +5,7 @@ metadata:
     service: giggso-webpush
   name: giggso-webpush
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: "8081"
     port: 8081
